<?xml version="1.0" encoding="utf-8"?>
<TabHost
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tabHost"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/tab1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_margin"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spDirectionOfTranslate"
                    style="@style/spinner_styles"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="@dimen/elem_margin"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@id/spDirectionOfTranslate"
                    android:layout_marginBottom="@dimen/elem_margin"
                    android:layout_marginTop="@dimen/elem_margin"
                    android:background="@drawable/edittext_style"
                    android:ems="10"
                    android:gravity="clip_horizontal"
                    android:hint="@string/enterText"
                    android:inputType="textPersonName"
                    android:paddingBottom="@dimen/text_padding"
                    android:paddingLeft="@dimen/text_padding"
                    android:paddingStart="@dimen/elem_margin"
                    android:paddingEnd="38dp"
                    android:paddingRight="38dp"
                    android:paddingTop="@dimen/text_padding"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/buttonClearEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/editText"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:contentDescription="@string/clear"
                    android:src="@drawable/clear_edit"
                    android:visibility="invisible" />


                <ImageButton
                    android:id="@+id/ib_microphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/editText"
                    android:layout_alignRight="@id/editText"
                    android:contentDescription="@string/read"
                    android:layout_alignTop="@id/editText"
                    android:layout_centerVertical="@id/editText"
                    android:layout_margin="@dimen/elem_margin"
                    android:background="@color/white"
                    android:src="@drawable/microphone" />


                <ImageButton
                    android:id="@+id/ib_speakerEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_microphone"
                    android:layout_alignEnd="@id/editText"
                    android:layout_alignRight="@id/editText"
                    android:layout_centerVertical="@id/editText"
                    android:contentDescription="@string/speak"
                    android:layout_margin="@dimen/elem_margin"
                    android:background="@color/white"
                    android:visibility="invisible"
                    android:src="@drawable/speaker_icon" />

                <TextView
                    android:id="@+id/tv_TranslatingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editText"
                    android:layout_margin="@dimen/elem_margin"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_startingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_TranslatingText"
                    android:layout_margin="@dimen/elem_margin"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_PartOfSpeech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_startingText"
                    android:layout_margin="@dimen/elem_margin"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <ImageButton
                    android:id="@+id/ib_speaker"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/speak"
                    android:layout_alignBottom="@id/tv_TranslatingText"
                    android:layout_alignEnd="@id/editText"
                    android:layout_marginEnd="@dimen/elem_margin"
                    android:layout_marginRight="@dimen/elem_margin"
                    android:layout_alignRight="@id/editText"
                    android:layout_centerVertical="@id/editText"
                    android:background="@color/white"
                    android:src="@drawable/speaker_icon" />

                <ImageButton
                    android:id="@+id/ib_favoriteMain"
                    android:layout_width="wrap_content"
                    android:visibility="invisible"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/favorite"
                    android:layout_alignBottom="@id/tv_startingText"
                    android:layout_marginEnd="@dimen/elem_margin"
                    android:layout_marginRight="@dimen/elem_margin"
                    android:layout_alignEnd="@id/editText"
                    android:layout_alignRight="@id/editText"
                    android:layout_centerVertical="@id/editText"
                    android:background="@color/white"
                    android:src="@drawable/favorite_false_icon" />


                <ListView
                    android:id="@+id/lv_Dictionary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_PartOfSpeech"
                    android:textSize="18sp">

                </ListView>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/tab2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/elem_margin"
                    android:hint="@string/searchInHistory"
                    android:paddingEnd="4dp"
                    android:paddingRight="4dp"
                    android:paddingLeft="25dp"
                    android:paddingStart="25dp"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/finder_icon"
                    android:background="@color/white"
                    android:contentDescription="@string/searchInHistory"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:layout_alignBottom="@id/searchEditText"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ListView
                    android:id="@+id/lv_History"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/activity_margin"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    />
                    <ImageButton
                        android:id="@+id/delete"
                        android:layout_width="wrap_content"
                        android:src="@drawable/delete_icon"
                        android:background="@color/white"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@id/lv_History"
                        android:layout_alignEnd="@id/lv_History"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/delete"
                        android:layout_alignBottom="@id/lv_History"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/searchEditTextFavorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/elem_margin"
                    android:hint="@string/searchInFavorite"
                    android:paddingEnd="4dp"
                    android:paddingRight="4dp"
                    android:paddingLeft="25dp"
                    android:paddingStart="25dp"
                    />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/finder_icon"
                    android:background="@color/white"
                    android:contentDescription="@string/searchInFavorite"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:layout_alignBottom="@id/searchEditTextFavorite"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <ListView
                    android:id="@+id/lv_Favorite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/activity_margin"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin" />
                <ImageButton
                    android:id="@+id/deleteFavorite"
                    android:layout_width="wrap_content"
                    android:src="@drawable/delete_icon"
                    android:background="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/lv_Favorite"
                    android:contentDescription="@string/delete"
                    android:layout_alignEnd="@id/lv_Favorite"
                    android:layout_centerVertical="true"
                    android:layout_alignBottom="@id/lv_Favorite"/>
            </RelativeLayout>
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
</TabHost>